[gd_scene load_steps=10 format=3 uid="uid://d2pc0u38e2pm7"]

[ext_resource type="Script" path="res://world.gd" id="1_w1nqv"]
[ext_resource type="PackedScene" uid="uid://bao8qvqq5xyp3" path="res://rect_geom/rule_mesh.tscn" id="2_gfhr4"]
[ext_resource type="Script" path="res://RotatingCam.gd" id="2_x8e6k"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_241in"]
sky_top_color = Color(0.184314, 0.309804, 0.309804, 1)
sky_horizon_color = Color(0.184314, 0.309804, 0.309804, 1)
sky_curve = 1e-05
ground_bottom_color = Color(0.0196078, 0.145098, 0.2, 1)
ground_curve = 1e-05
sun_angle_max = 0.0

[sub_resource type="Sky" id="Sky_3ejbr"]
sky_material = SubResource("ProceduralSkyMaterial_241in")

[sub_resource type="Environment" id="Environment_djeow"]
background_mode = 2
sky = SubResource("Sky_3ejbr")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kitwe"]
shading_mode = 0
albedo_color = Color(0.0196078, 0.145098, 0.2, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_hcn1l"]
material = SubResource("StandardMaterial3D_kitwe")
top_radius = 1.0
bottom_radius = 1.0
height = 0.1
radial_segments = 512
rings = 1
cap_bottom = false

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_mk2er"]
points = PackedVector3Array(-0.0123336, -0.05, -1, -0.0246672, -0.05, -0.999804, -0.0123336, 0.05, -1, 0.0121378, -0.05, -1, -0.0370008, -0.05, -0.999413, -0.0246672, 0.05, -0.999804, 0.0121378, 0.05, -1, 0.0244714, -0.05, -0.999804, -0.0370008, 0.05, -0.999413, -0.0614722, -0.05, -0.998238, 0.0244714, 0.05, -0.999804, 0.036805, -0.05, -0.999413, -0.0614722, 0.05, -0.998238, -0.07361, -0.05, -0.997455, 0.036805, 0.05, -0.999413, 0.0612764, -0.05, -0.998238, -0.07361, 0.05, -0.997455, -0.0859436, -0.05, -0.996476, 0.0612764, 0.05, -0.998238, 0.0734142, -0.05, -0.997455, -0.0859436, 0.05, -0.996476, -0.0980814, -0.05, -0.995301, 0.0734142, 0.05, -0.997455, 0.0857478, -0.05, -0.996476, -0.0980814, 0.05, -0.995301, -0.110415, -0.05, -0.993931, 0.0857478, 0.05, -0.996476, 0.0978857, -0.05, -0.995301, -0.110415, 0.05, -0.993931, -0.122553, -0.05, -0.992561, 0.0978857, 0.05, -0.995301, 0.110219, -0.05, -0.993931, -0.122553, 0.05, -0.992561, -0.134691, -0.05, -0.990995, 0.110219, 0.05, -0.993931, 0.122357, -0.05, -0.992561, -0.134691, 0.05, -0.990995, -0.158966, -0.05, -0.987471, 0.122357, 0.05, -0.992561, 0.134495, -0.05, -0.990995, -0.158966, 0.05, -0.987471, -0.171104, -0.05, -0.985317, 0.134495, 0.05, -0.990995, 0.158771, -0.05, -0.987471, -0.171104, 0.05, -0.985317, -0.183046, -0.05, -0.983164, 0.158771, 0.05, -0.987471, 0.170908, -0.05, -0.985317, -0.183046, 0.05, -0.983164, -0.195184, -0.05, -0.980814, 0.170908, 0.05, -0.985317, 0.18285, -0.05, -0.983164, -0.195184, 0.05, -0.980814, -0.207126, -0.05, -0.978465, 0.18285, 0.05, -0.983164, 0.194988, -0.05, -0.980814, -0.207126, 0.05, -0.978465, -0.219264, -0.05, -0.975724, 0.194988, 0.05, -0.980814, 0.20693, -0.05, -0.978465, -0.219264, 0.05, -0.975724, -0.231206, -0.05, -0.972984, 0.20693, 0.05, -0.978465, 0.219068, -0.05, -0.975724, -0.231206, 0.05, -0.972984, -0.243148, -0.05, -0.970047, 0.219068, 0.05, -0.975724, 0.23101, -0.05, -0.972984, -0.243148, 0.05, -0.970047, -0.254894, -0.05, -0.96711, 0.23101, 0.05, -0.972984, 0.242952, -0.05, -0.970047, -0.254894, 0.05, -0.96711, -0.266836, -0.05, -0.963782, 0.242952, 0.05, -0.970047, 0.254699, -0.05, -0.96711, -0.266836, 0.05, -0.963782, -0.290329, -0.05, -0.957126, 0.254699, 0.05, -0.96711, 0.266641, -0.05, -0.963782, -0.290329, 0.05, -0.957126, -0.313821, -0.05, -0.949687, 0.266641, 0.05, -0.963782, 0.290133, -0.05, -0.957126, -0.313821, 0.05, -0.949687, -0.325372, -0.05, -0.945771, 0.290133, 0.05, -0.957126, 0.313626, -0.05, -0.949687, -0.325372, 0.05, -0.945771, -0.336922, -0.05, -0.94166, 0.313626, 0.05, -0.949687, 0.325176, -0.05, -0.945771, -0.336922, 0.05, -0.94166, -0.360023, -0.05, -0.933046, 0.325176, 0.05, -0.945771, 0.336727, -0.05, -0.94166, -0.360023, 0.05, -0.933046, -0.382733, -0.05, -0.924041, 0.336727, 0.05, -0.94166, 0.359828, -0.05, -0.933046, -0.382733, 0.05, -0.924041, -0.394088, -0.05, -0.919146, 0.359828, 0.05, -0.933046, 0.382537, -0.05, -0.924041, -0.394088, 0.05, -0.919146, -0.416601, -0.05, -0.909358, 0.382537, 0.05, -0.924041, 0.393892, -0.05, -0.919146, -0.416601, 0.05, -0.909358, -0.438724, -0.05, -0.898786, 0.393892, 0.05, -0.919146, 0.416406, -0.05, -0.909358, -0.438724, 0.05, -0.898786, -0.46065, -0.05, -0.887823, 0.416406, 0.05, -0.909358, 0.438528, -0.05, -0.898786, -0.46065, 0.05, -0.887823, -0.492952, -0.05, -0.870204, 0.438528, 0.05, -0.898786, 0.460454, -0.05, -0.887823, -0.492952, 0.05, -0.870204, -0.50372, -0.05, -0.864135, 0.460454, 0.05, -0.887823, 0.492756, -0.05, -0.870204, -0.50372, 0.05, -0.864135, -0.514291, -0.05, -0.85787, 0.492756, 0.05, -0.870204, 0.503524, -0.05, -0.864135, -0.514291, 0.05, -0.85787, -0.535043, -0.05, -0.844949, 0.503524, 0.05, -0.864135, 0.514096, -0.05, -0.85787, -0.535043, 0.05, -0.844949, -0.545419, -0.05, -0.838293, 0.514096, 0.05, -0.85787, 0.534847, -0.05, -0.844949, -0.545419, 0.05, -0.838293, -0.555599, -0.05, -0.831637, 0.534847, 0.05, -0.844949, 0.545223, -0.05, -0.838293, -0.555599, 0.05, -0.831637, -0.565779, -0.05, -0.824785, 0.545223, 0.05, -0.838293, 0.555403, -0.05, -0.831637, -0.565779, 0.05, -0.824785, -0.575959, -0.05, -0.817737, 0.555403, 0.05, -0.831637, 0.565583, -0.05, -0.824785, -0.575959, 0.05, -0.817737, -0.585944, -0.05, -0.810493, 0.565583, 0.05, -0.824785, 0.575763, -0.05, -0.817737, -0.585944, 0.05, -0.810493, -0.605521, -0.05, -0.796006, 0.575763, 0.05, -0.817737, 0.585748, -0.05, -0.810493, -0.605521, 0.05, -0.796006, -0.624902, -0.05, -0.780932, 0.585748, 0.05, -0.810493, 0.605325, -0.05, -0.796006, -0.624902, 0.05, -0.780932, -0.634495, -0.05, -0.773101, 0.605325, 0.05, -0.796006, 0.624706, -0.05, -0.780932, -0.634495, 0.05, -0.773101, -0.643892, -0.05, -0.76527, 0.624706, 0.05, -0.780932, 0.634299, -0.05, -0.773101, -0.643892, 0.05, -0.76527, -0.653289, -0.05, -0.757244, 0.634299, 0.05, -0.773101, 0.643696, -0.05, -0.76527, -0.653289, 0.05, -0.757244, -0.66249, -0.05, -0.749217, 0.643696, 0.05, -0.76527, 0.653093, -0.05, -0.757244, -0.66249, 0.05, -0.749217, -0.671691, -0.05, -0.740995, 0.653093, 0.05, -0.757244, 0.662294, -0.05, -0.749217, -0.671691, 0.05, -0.740995, -0.680697, -0.05, -0.732772, 0.662294, 0.05, -0.749217, 0.671496, -0.05, -0.740995, -0.680697, 0.05, -0.732772, -0.689702, -0.05, -0.724354, 0.671496, 0.05, -0.740995, 0.680501, -0.05, -0.732772, -0.689702, 0.05, -0.724354, -0.698512, -0.05, -0.71574, 0.680501, 0.05, -0.732772, 0.689507, -0.05, -0.724354, -0.698512, 0.05, -0.71574, -0.71574, -0.05, -0.698512, 0.689507, 0.05, -0.724354, 0.698316, -0.05, -0.71574, -0.71574, 0.05, -0.698512, -0.724354, -0.05, -0.689702, 0.698316, 0.05, -0.71574, 0.715544, -0.05, -0.698512, -0.724354, 0.05, -0.689702, -0.732772, -0.05, -0.680697, 0.715544, 0.05, -0.698512, 0.724158, -0.05, -0.689702, -0.732772, 0.05, -0.680697, -0.740995, -0.05, -0.671691, 0.724158, 0.05, -0.689702, 0.732576, -0.05, -0.680697, -0.740995, 0.05, -0.671691, -0.749217, -0.05, -0.66249, 0.732576, 0.05, -0.680697, 0.740799, -0.05, -0.671691, -0.749217, 0.05, -0.66249, -0.757244, -0.05, -0.653289, 0.740799, 0.05, -0.671691, 0.749021, -0.05, -0.66249, -0.757244, 0.05, -0.653289, -0.76527, -0.05, -0.643892, 0.749021, 0.05, -0.66249, 0.757048, -0.05, -0.653289, -0.76527, 0.05, -0.643892, -0.773101, -0.05, -0.634495, 0.757048, 0.05, -0.653289, 0.765074, -0.05, -0.643892, -0.773101, 0.05, -0.634495, -0.780932, -0.05, -0.624902, 0.765074, 0.05, -0.643892, 0.772905, -0.05, -0.634495, -0.780932, 0.05, -0.624902, -0.796006, -0.05, -0.605521, 0.772905, 0.05, -0.634495, 0.780736, -0.05, -0.624902, -0.796006, 0.05, -0.605521, -0.810493, -0.05, -0.585944, 0.780736, 0.05, -0.624902, 0.79581, -0.05, -0.605521, -0.810493, 0.05, -0.585944, -0.817737, -0.05, -0.575959, 0.79581, 0.05, -0.605521, 0.810298, -0.05, -0.585944, -0.817737, 0.05, -0.575959, -0.824785, -0.05, -0.565779, 0.810298, 0.05, -0.585944, 0.817541, -0.05, -0.575959, -0.824785, 0.05, -0.565779, -0.831637, -0.05, -0.555599, 0.817541, 0.05, -0.575959, 0.824589, -0.05, -0.565779, -0.831637, 0.05, -0.555599, -0.838293, -0.05, -0.545419, 0.824589, 0.05, -0.565779, 0.831441, -0.05, -0.555599, -0.838293, 0.05, -0.545419, -0.844949, -0.05, -0.535043, 0.831441, 0.05, -0.555599, 0.838097, -0.05, -0.545419, -0.844949, 0.05, -0.535043, -0.85787, -0.05, -0.514291, 0.838097, 0.05, -0.545419, 0.844753, -0.05, -0.535043, -0.85787, 0.05, -0.514291, -0.864135, -0.05, -0.50372, 0.844753, 0.05, -0.535043, 0.857674, -0.05, -0.514291, -0.864135, 0.05, -0.50372, -0.870204, -0.05, -0.492952, 0.857674, 0.05, -0.514291, 0.863939, -0.05, -0.50372, -0.870204, 0.05, -0.492952, -0.887823, -0.05, -0.46065, 0.863939, 0.05, -0.50372, 0.870008, -0.05, -0.492952, -0.887823, 0.05, -0.46065, -0.898786, -0.05, -0.438724, 0.870008, 0.05, -0.492952, 0.887627, -0.05, -0.46065, -0.898786, 0.05, -0.438724, -0.909358, -0.05, -0.416601, 0.887627, 0.05, -0.46065, 0.89859, -0.05, -0.438724, -0.909358, 0.05, -0.416601, -0.919146, -0.05, -0.394088, 0.89859, 0.05, -0.438724, 0.909162, -0.05, -0.416601, -0.919146, 0.05, -0.394088, -0.924041, -0.05, -0.382733, 0.909162, 0.05, -0.416601, 0.918951, -0.05, -0.394088, -0.924041, 0.05, -0.382733, -0.933046, -0.05, -0.360023, 0.918951, 0.05, -0.394088, 0.923845, -0.05, -0.382733, -0.933046, 0.05, -0.360023, -0.94166, -0.05, -0.336922, 0.923845, 0.05, -0.382733, 0.93285, -0.05, -0.360023, -0.94166, 0.05, -0.336922, -0.945771, -0.05, -0.325372, 0.93285, 0.05, -0.360023, 0.941464, -0.05, -0.336922, -0.945771, 0.05, -0.325372, -0.949687, -0.05, -0.313821, 0.941464, 0.05, -0.336922, 0.945576, -0.05, -0.325372, -0.949687, 0.05, -0.313821, -0.957126, -0.05, -0.290329, 0.945576, 0.05, -0.325372, 0.949491, -0.05, -0.313821, -0.957126, 0.05, -0.290329, -0.963782, -0.05, -0.266836, 0.949491, 0.05, -0.313821, 0.95693, -0.05, -0.290329, -0.963782, 0.05, -0.266836, -0.96711, -0.05, -0.254894, 0.95693, 0.05, -0.290329, 0.963587, -0.05, -0.266836, -0.96711, 0.05, -0.254894, -0.970047, -0.05, -0.243148, 0.963587, 0.05, -0.266836, 0.966915, -0.05, -0.254894, -0.970047, 0.05, -0.243148, -0.972984, -0.05, -0.231206, 0.966915, 0.05, -0.254894, 0.969851, -0.05, -0.243148, -0.972984, 0.05, -0.231206, -0.975724, -0.05, -0.219264, 0.969851, 0.05, -0.243148, 0.972788, -0.05, -0.231206, -0.975724, 0.05, -0.219264, -0.978465, -0.05, -0.207126, 0.972788, 0.05, -0.231206, 0.975529, -0.05, -0.219264, -0.978465, 0.05, -0.207126, -0.980814, -0.05, -0.195184, 0.975529, 0.05, -0.219264, 0.978269, -0.05, -0.207126, -0.980814, 0.05, -0.195184, -0.983164, -0.05, -0.183046, 0.978269, 0.05, -0.207126, 0.980619, -0.05, -0.195184, -0.983164, 0.05, -0.183046, -0.985317, -0.05, -0.171104, 0.980619, 0.05, -0.195184, 0.982968, -0.05, -0.183046, -0.985317, 0.05, -0.171104, -0.987471, -0.05, -0.158966, 0.982968, 0.05, -0.183046, 0.985121, -0.05, -0.171104, -0.987471, 0.05, -0.158966, -0.990995, -0.05, -0.134691, 0.985121, 0.05, -0.171104, 0.987275, -0.05, -0.158966, -0.990995, 0.05, -0.134691, -0.992561, -0.05, -0.122553, 0.987275, 0.05, -0.158966, 0.990799, -0.05, -0.134691, -0.992561, 0.05, -0.122553, -0.993931, -0.05, -0.110415, 0.990799, 0.05, -0.134691, 0.992365, -0.05, -0.122553, -0.993931, 0.05, -0.110415, -0.995301, -0.05, -0.0980814, 0.992365, 0.05, -0.122553, 0.993735, -0.05, -0.110415, -0.995301, 0.05, -0.0980814, -0.996476, -0.05, -0.0859436, 0.993735, 0.05, -0.110415, 0.995106, -0.05, -0.0980814, -0.996476, 0.05, -0.0859436, -0.997455, -0.05, -0.07361, 0.995106, 0.05, -0.0980814, 0.99628, -0.05, -0.0859436, -0.997455, 0.05, -0.07361, -0.998238, -0.05, -0.0614722, 0.99628, 0.05, -0.0859436, 0.997259, -0.05, -0.07361, -0.998238, 0.05, -0.0614722, -0.999413, -0.05, -0.0370008, 0.997259, 0.05, -0.07361, 0.998042, -0.05, -0.0614722, -0.999413, 0.05, -0.0370008, -0.999804, -0.05, -0.0246672, 0.998042, 0.05, -0.0614722, 0.999217, -0.05, -0.0370008, -0.999804, 0.05, -0.0246672, -1, -0.05, -0.0123336, 0.999217, 0.05, -0.0370008, 0.999609, -0.05, -0.0246672, -1, 0.05, -0.0123336, -1, -0.05, 0.0121378, 0.999609, 0.05, -0.0246672, 1, -0.05, 0, -1, 0.05, 0.0121378, -0.999804, -0.05, 0.0244714, 1, 0.05, 0, 0.999609, -0.05, 0.0244714, -0.999804, 0.05, 0.0244714, -0.999413, -0.05, 0.036805, 0.999609, 0.05, 0.0244714, 0.999217, -0.05, 0.036805, -0.999413, 0.05, 0.036805, -0.998238, -0.05, 0.0612764, 0.999217, 0.05, 0.036805, 0.998042, -0.05, 0.0612764, -0.998238, 0.05, 0.0612764, -0.997455, -0.05, 0.0734142, 0.998042, 0.05, 0.0612764, 0.997259, -0.05, 0.0734142, -0.997455, 0.05, 0.0734142, -0.996476, -0.05, 0.0857478, 0.997259, 0.05, 0.0734142, 0.99628, -0.05, 0.0857478, -0.996476, 0.05, 0.0857478, -0.995301, -0.05, 0.0978857, 0.99628, 0.05, 0.0857478, 0.995106, -0.05, 0.0978857, -0.995301, 0.05, 0.0978857, -0.993931, -0.05, 0.110219, 0.995106, 0.05, 0.0978857, 0.993735, -0.05, 0.110219, -0.993931, 0.05, 0.110219, -0.992561, -0.05, 0.122357, 0.993735, 0.05, 0.110219, 0.992365, -0.05, 0.122357, -0.992561, 0.05, 0.122357, -0.990995, -0.05, 0.134495, 0.992365, 0.05, 0.122357, 0.990799, -0.05, 0.134495, -0.990995, 0.05, 0.134495, -0.987471, -0.05, 0.158771, 0.990799, 0.05, 0.134495, 0.987275, -0.05, 0.158771, -0.987471, 0.05, 0.158771, -0.985317, -0.05, 0.170908, 0.987275, 0.05, 0.158771, 0.985121, -0.05, 0.170908, -0.985317, 0.05, 0.170908, -0.983164, -0.05, 0.18285, 0.985121, 0.05, 0.170908, 0.982968, -0.05, 0.18285, -0.983164, 0.05, 0.18285, -0.980814, -0.05, 0.194988, 0.982968, 0.05, 0.18285, 0.980619, -0.05, 0.194988, -0.980814, 0.05, 0.194988, -0.978465, -0.05, 0.20693, 0.980619, 0.05, 0.194988, 0.978269, -0.05, 0.20693, -0.978465, 0.05, 0.20693, -0.975724, -0.05, 0.219068, 0.978269, 0.05, 0.20693, 0.975529, -0.05, 0.219068, -0.975724, 0.05, 0.219068, -0.972984, -0.05, 0.23101, 0.975529, 0.05, 0.219068, 0.972788, -0.05, 0.23101, -0.972984, 0.05, 0.23101, -0.970047, -0.05, 0.242952, 0.972788, 0.05, 0.23101, 0.969851, -0.05, 0.242952, -0.970047, 0.05, 0.242952, -0.96711, -0.05, 0.254699, 0.969851, 0.05, 0.242952, 0.966915, -0.05, 0.254699, -0.96711, 0.05, 0.254699, -0.963782, -0.05, 0.266641, 0.966915, 0.05, 0.254699, 0.963587, -0.05, 0.266641, -0.963782, 0.05, 0.266641, -0.957126, -0.05, 0.290133, 0.963587, 0.05, 0.266641, 0.95693, -0.05, 0.290133, -0.957126, 0.05, 0.290133, -0.949687, -0.05, 0.313626, 0.95693, 0.05, 0.290133, 0.949491, -0.05, 0.313626, -0.949687, 0.05, 0.313626, -0.945771, -0.05, 0.325176, 0.949491, 0.05, 0.313626, 0.945576, -0.05, 0.325176, -0.945771, 0.05, 0.325176, -0.94166, -0.05, 0.336727, 0.945576, 0.05, 0.325176, 0.941464, -0.05, 0.336727, -0.94166, 0.05, 0.336727, -0.933046, -0.05, 0.359828, 0.941464, 0.05, 0.336727, 0.93285, -0.05, 0.359828, -0.933046, 0.05, 0.359828, -0.924041, -0.05, 0.382537, 0.93285, 0.05, 0.359828, 0.923845, -0.05, 0.382537, -0.924041, 0.05, 0.382537, -0.919146, -0.05, 0.393892, 0.923845, 0.05, 0.382537, 0.918951, -0.05, 0.393892, -0.919146, 0.05, 0.393892, -0.909358, -0.05, 0.416406, 0.918951, 0.05, 0.393892, 0.909162, -0.05, 0.416406, -0.909358, 0.05, 0.416406, -0.898786, -0.05, 0.438528, 0.909162, 0.05, 0.416406, 0.89859, -0.05, 0.438528, -0.898786, 0.05, 0.438528, -0.887823, -0.05, 0.460454, 0.89859, 0.05, 0.438528, 0.887627, -0.05, 0.460454, -0.887823, 0.05, 0.460454, -0.870204, -0.05, 0.492756, 0.887627, 0.05, 0.460454, 0.870008, -0.05, 0.492756, -0.870204, 0.05, 0.492756, -0.864135, -0.05, 0.503524, 0.870008, 0.05, 0.492756, 0.863939, -0.05, 0.503524, -0.864135, 0.05, 0.503524, -0.85787, -0.05, 0.514096, 0.863939, 0.05, 0.503524, 0.857674, -0.05, 0.514096, -0.85787, 0.05, 0.514096, -0.844949, -0.05, 0.534847, 0.857674, 0.05, 0.514096, 0.844753, -0.05, 0.534847, -0.844949, 0.05, 0.534847, -0.838293, -0.05, 0.545223, 0.844753, 0.05, 0.534847, 0.838097, -0.05, 0.545223, -0.838293, 0.05, 0.545223, -0.831637, -0.05, 0.555403, 0.838097, 0.05, 0.545223, 0.831441, -0.05, 0.555403, -0.831637, 0.05, 0.555403, -0.824785, -0.05, 0.565583, 0.831441, 0.05, 0.555403, 0.824589, -0.05, 0.565583, -0.824785, 0.05, 0.565583, -0.817737, -0.05, 0.575763, 0.824589, 0.05, 0.565583, 0.817541, -0.05, 0.575763, -0.817737, 0.05, 0.575763, -0.810493, -0.05, 0.585748, 0.817541, 0.05, 0.575763, 0.810298, -0.05, 0.585748, -0.810493, 0.05, 0.585748, -0.796006, -0.05, 0.605325, 0.810298, 0.05, 0.585748, 0.79581, -0.05, 0.605325, -0.796006, 0.05, 0.605325, -0.780932, -0.05, 0.624706, 0.79581, 0.05, 0.605325, 0.780736, -0.05, 0.624706, -0.780932, 0.05, 0.624706, -0.773101, -0.05, 0.634299, 0.780736, 0.05, 0.624706, 0.772905, -0.05, 0.634299, -0.773101, 0.05, 0.634299, -0.76527, -0.05, 0.643696, 0.772905, 0.05, 0.634299, 0.765074, -0.05, 0.643696, -0.76527, 0.05, 0.643696, -0.757244, -0.05, 0.653093, 0.765074, 0.05, 0.643696, 0.757048, -0.05, 0.653093, -0.757244, 0.05, 0.653093, -0.749217, -0.05, 0.662294, 0.757048, 0.05, 0.653093, 0.749021, -0.05, 0.662294, -0.749217, 0.05, 0.662294, -0.740995, -0.05, 0.671496, 0.749021, 0.05, 0.662294, 0.740799, -0.05, 0.671496, -0.740995, 0.05, 0.671496, -0.732772, -0.05, 0.680501, 0.740799, 0.05, 0.671496, 0.732576, -0.05, 0.680501, -0.732772, 0.05, 0.680501, -0.724354, -0.05, 0.689507, 0.732576, 0.05, 0.680501, 0.724158, -0.05, 0.689507, -0.724354, 0.05, 0.689507, -0.71574, -0.05, 0.698316, 0.724158, 0.05, 0.689507, 0.715544, -0.05, 0.698316, -0.71574, 0.05, 0.698316, -0.698512, -0.05, 0.715544, 0.715544, 0.05, 0.698316, 0.698316, -0.05, 0.715544, -0.698512, 0.05, 0.715544, -0.689702, -0.05, 0.724158, 0.698316, 0.05, 0.715544, 0.689507, -0.05, 0.724158, -0.689702, 0.05, 0.724158, -0.680697, -0.05, 0.732576, 0.689507, 0.05, 0.724158, 0.680501, -0.05, 0.732576, -0.680697, 0.05, 0.732576, -0.671691, -0.05, 0.740799, 0.680501, 0.05, 0.732576, 0.671496, -0.05, 0.740799, -0.671691, 0.05, 0.740799, -0.66249, -0.05, 0.749021, 0.671496, 0.05, 0.740799, 0.662294, -0.05, 0.749021, -0.66249, 0.05, 0.749021, -0.653289, -0.05, 0.757048, 0.662294, 0.05, 0.749021, 0.653093, -0.05, 0.757048, -0.653289, 0.05, 0.757048, -0.643892, -0.05, 0.765074, 0.653093, 0.05, 0.757048, 0.643696, -0.05, 0.765074, -0.643892, 0.05, 0.765074, -0.634495, -0.05, 0.772905, 0.643696, 0.05, 0.765074, 0.634299, -0.05, 0.772905, -0.634495, 0.05, 0.772905, -0.624902, -0.05, 0.780736, 0.634299, 0.05, 0.772905, 0.624706, -0.05, 0.780736, -0.624902, 0.05, 0.780736, -0.605521, -0.05, 0.79581, 0.624706, 0.05, 0.780736, 0.605325, -0.05, 0.79581, -0.605521, 0.05, 0.79581, -0.585944, -0.05, 0.810298, 0.605325, 0.05, 0.79581, 0.585748, -0.05, 0.810298, -0.585944, 0.05, 0.810298, -0.575959, -0.05, 0.817541, 0.585748, 0.05, 0.810298, 0.575763, -0.05, 0.817541, -0.575959, 0.05, 0.817541, -0.565779, -0.05, 0.824589, 0.575763, 0.05, 0.817541, 0.565583, -0.05, 0.824589, -0.565779, 0.05, 0.824589, -0.555599, -0.05, 0.831441, 0.565583, 0.05, 0.824589, 0.555403, -0.05, 0.831441, -0.555599, 0.05, 0.831441, -0.545419, -0.05, 0.838097, 0.555403, 0.05, 0.831441, 0.545223, -0.05, 0.838097, -0.545419, 0.05, 0.838097, -0.535043, -0.05, 0.844753, 0.545223, 0.05, 0.838097, 0.534847, -0.05, 0.844753, -0.535043, 0.05, 0.844753, -0.514291, -0.05, 0.857674, 0.534847, 0.05, 0.844753, 0.514096, -0.05, 0.857674, -0.514291, 0.05, 0.857674, -0.50372, -0.05, 0.863939, 0.514096, 0.05, 0.857674, 0.503524, -0.05, 0.863939, -0.50372, 0.05, 0.863939, -0.492952, -0.05, 0.870008, 0.503524, 0.05, 0.863939, 0.492756, -0.05, 0.870008, -0.492952, 0.05, 0.870008, -0.46065, -0.05, 0.887627, 0.492756, 0.05, 0.870008, 0.460454, -0.05, 0.887627, -0.46065, 0.05, 0.887627, -0.438724, -0.05, 0.89859, 0.460454, 0.05, 0.887627, 0.438528, -0.05, 0.89859, -0.438724, 0.05, 0.89859, -0.416601, -0.05, 0.909162, 0.438528, 0.05, 0.89859, 0.416406, -0.05, 0.909162, -0.416601, 0.05, 0.909162, -0.394088, -0.05, 0.918951, 0.416406, 0.05, 0.909162, 0.393892, -0.05, 0.918951, -0.394088, 0.05, 0.918951, -0.382733, -0.05, 0.923845, 0.393892, 0.05, 0.918951, 0.382537, -0.05, 0.923845, -0.382733, 0.05, 0.923845, -0.360023, -0.05, 0.93285, 0.382537, 0.05, 0.923845, 0.359828, -0.05, 0.93285, -0.360023, 0.05, 0.93285, -0.336922, -0.05, 0.941464, 0.359828, 0.05, 0.93285, 0.336727, -0.05, 0.941464, -0.336922, 0.05, 0.941464, -0.325372, -0.05, 0.945576, 0.336727, 0.05, 0.941464, 0.325176, -0.05, 0.945576, -0.325372, 0.05, 0.945576, -0.313821, -0.05, 0.949491, 0.325176, 0.05, 0.945576, 0.313626, -0.05, 0.949491, -0.313821, 0.05, 0.949491, -0.290329, -0.05, 0.95693, 0.313626, 0.05, 0.949491, 0.290133, -0.05, 0.95693, -0.290329, 0.05, 0.95693, -0.266836, -0.05, 0.963587, 0.290133, 0.05, 0.95693, 0.266641, -0.05, 0.963587, -0.266836, 0.05, 0.963587, -0.254894, -0.05, 0.966915, 0.266641, 0.05, 0.963587, 0.254699, -0.05, 0.966915, -0.254894, 0.05, 0.966915, -0.243148, -0.05, 0.969851, 0.254699, 0.05, 0.966915, 0.242952, -0.05, 0.969851, -0.243148, 0.05, 0.969851, -0.231206, -0.05, 0.972788, 0.242952, 0.05, 0.969851, 0.23101, -0.05, 0.972788, -0.231206, 0.05, 0.972788, -0.219264, -0.05, 0.975529, 0.23101, 0.05, 0.972788, 0.219068, -0.05, 0.975529, -0.219264, 0.05, 0.975529, -0.207126, -0.05, 0.978269, 0.219068, 0.05, 0.975529, 0.20693, -0.05, 0.978269, -0.207126, 0.05, 0.978269, -0.195184, -0.05, 0.980619, 0.20693, 0.05, 0.978269, 0.194988, -0.05, 0.980619, -0.195184, 0.05, 0.980619, -0.183046, -0.05, 0.982968, 0.194988, 0.05, 0.980619, 0.18285, -0.05, 0.982968, -0.183046, 0.05, 0.982968, -0.171104, -0.05, 0.985121, 0.18285, 0.05, 0.982968, 0.170908, -0.05, 0.985121, -0.171104, 0.05, 0.985121, -0.158966, -0.05, 0.987275, 0.170908, 0.05, 0.985121, 0.158771, -0.05, 0.987275, -0.158966, 0.05, 0.987275, -0.134691, -0.05, 0.990799, 0.158771, 0.05, 0.987275, 0.134495, -0.05, 0.990799, -0.134691, 0.05, 0.990799, -0.122553, -0.05, 0.992365, 0.134495, 0.05, 0.990799, 0.122357, -0.05, 0.992365, -0.122553, 0.05, 0.992365, -0.110415, -0.05, 0.993735, 0.122357, 0.05, 0.992365, 0.110219, -0.05, 0.993735, -0.110415, 0.05, 0.993735, -0.0980814, -0.05, 0.995106, 0.110219, 0.05, 0.993735, 0.0978857, -0.05, 0.995106, -0.0980814, 0.05, 0.995106, -0.0859436, -0.05, 0.99628, 0.0978857, 0.05, 0.995106, 0.0857478, -0.05, 0.99628, -0.0859436, 0.05, 0.99628, -0.07361, -0.05, 0.997259, 0.0857478, 0.05, 0.99628, 0.0734142, -0.05, 0.997259, -0.07361, 0.05, 0.997259, -0.0614722, -0.05, 0.998042, 0.0734142, 0.05, 0.997259, 0.0612764, -0.05, 0.998042, -0.0614722, 0.05, 0.998042, -0.0370008, -0.05, 0.999217, 0.0612764, 0.05, 0.998042, 0.036805, -0.05, 0.999217, -0.0370008, 0.05, 0.999217, -0.0246672, -0.05, 0.999609, 0.036805, 0.05, 0.999217, 0.0244714, -0.05, 0.999609, -0.0246672, 0.05, 0.999609, 0, -0.05, 1, 0.0244714, 0.05, 0.999609, 0, 0.05, 1)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_w1nqv")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.304229, 1.01578, 0.26726)
script = ExtResource("2_x8e6k")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_djeow")

[node name="Fascia" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.05)
sorting_offset = -1.0
mesh = SubResource("CylinderMesh_hcn1l")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1.2, 0, 0, 0, -5.24537e-08, -1.2, 0, 1.2, -5.24537e-08, 0, 0, -0.05)
shape = SubResource("ConvexPolygonShape3D_mk2er")

[node name="CoordinateMeshes" type="Node3D" parent="."]

[node name="RuleMesh" parent="CoordinateMeshes" instance=ExtResource("2_gfhr4")]
maxR = 18.0

[node name="LevelMeshes" type="Node3D" parent="CoordinateMeshes"]

[node name="RuleMeshLabel" type="Label3D" parent="CoordinateMeshes"]
pixel_size = 0.001
billboard = 1
double_sided = false
fixed_size = true
texture_filter = 0
text = "16.2km"
font_size = 48

[node name="Label" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -244.0
offset_bottom = 24.0
grow_horizontal = 0

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
